<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <import type="android.view.View"/>
        <import type="android.graphics.Color"/>
        <import type="com.freshdigitable.udonroad.user.UserInfoActivity"/>
        <import type="com.freshdigitable.udonroad.media.MediaViewActivity"/>
        <variable
            name="item"
            type="com.freshdigitable.udonroad.detail.DetailItem"
            />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_grid_margin"
        >
        <com.freshdigitable.udonroad.RetweetUserView
            android:id="@+id/d_rt_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/d_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginLeft="@dimen/detail_rt_start_margin"
            android:layout_marginStart="@dimen/detail_rt_start_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/detail_tweet_small_size"
            android:layout_centerVertical="true"
            app:iconSize="@dimen/detail_small_user_icon"
            android:visibility="@{item.retweet ? View.VISIBLE : View.GONE}"
            app:isRetweet="@{item.retweet}"
            app:imageUrl="@{item.retweetUser.miniProfileImageURLHttps}"
            app:screenName="@{item.retweetUser.screenName}"
            android:onClick="@{(v) -> UserInfoActivity.start(v.getContext(), item.retweetUser.id)}"
            tools:visibility="visible"
            tools:text="RT by @screenName"
            />

        <com.freshdigitable.udonroad.RoundedCornerImageView
            android:id="@+id/d_icon"
            android:layout_width="@dimen/tweet_user_icon"
            android:layout_height="@dimen/tweet_user_icon"
            android:layout_marginTop="@dimen/detail_grid_margin"
            app:layout_goneMarginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/d_rt_user"
            app:layout_constraintBottom_toTopOf="@id/d_tweet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/d_names"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:contentDescription="@string/desc_icon"
            app:imageUrl="@{item.user.profileImageURLHttps}"
            app:size="@{@dimen/tweet_user_icon}"
            app:placeholder="@{@drawable/ic_person_outline_black}"
            />

        <com.freshdigitable.udonroad.CombinedScreenNameTextView
            android:id="@+id/d_names"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_grid_margin"
            app:layout_constraintTop_toTopOf="@id/d_icon"
            app:layout_constraintStart_toEndOf="@id/d_icon"
            app:layout_constraintEnd_toStartOf="@id/d_twitter_bird"
            android:textSize="@dimen/detail_tweet_small_size"
            android:lines="2"
            android:ellipsize="end"
            app:names="@{item.combinedName}"
            android:textColor="@{item.retweet ? @color/twitter_action_retweeted : Color.GRAY}"
            tools:text="name\n\@screenName"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/d_twitter_bird"
            android:layout_width="@dimen/detail_twitter_icon_size"
            android:layout_height="@dimen/detail_twitter_icon_size"
            app:layout_constraintTop_toTopOf="@id/d_names"
            app:layout_constraintBottom_toBottomOf="@id/d_names"
            app:layout_constraintStart_toEndOf="@id/d_names"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/twitter_primary"
            app:srcCompat="@drawable/ic_twitter_bird"
            />

        <com.freshdigitable.udonroad.LinkableTextView
            android:id="@+id/d_tweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/d_icon"
            app:layout_constraintBottom_toTopOf="@id/d_image_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/detail_grid_margin"
            android:textSize="@dimen/detail_tweet_size"
            android:lineSpacingExtra="@dimen/grid_margin"
            android:text="@{item.tweet}"
            android:bufferType="spannable"
            android:textColor="@{item.retweet ? @color/twitter_action_retweeted : Color.GRAY}"
            tools:text="Tweet"
            />

        <com.freshdigitable.udonroad.media.ThumbnailContainer
            android:id="@+id/d_image_group"
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_thumb_height"
            android:layout_marginTop="@dimen/detail_grid_margin"
            app:layout_goneMarginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/d_tweet"
            app:layout_constraintBottom_toTopOf="@id/d_create_at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            app:mediaEntities="@{item.statusListItem.mediaEntities}"
            app:isPossiblySensitive="@{item.statusListItem.isPossiblySensitive}"
            app:onMediaClickListener="@{(view, index) -> MediaViewActivity.start(view.getContext(), item.id, index)}"
            tools:visibility="visible"
            app:thumbCount="4"
            />

        <TextView
            android:id="@+id/d_create_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_grid_margin"
            app:layout_constraintTop_toBottomOf="@id/d_image_group"
            app:layout_constraintBottom_toTopOf="@id/d_via"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:gravity="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="@dimen/detail_tweet_small_size"
            android:lines="1"
            android:textColor="@{item.retweet ? @color/twitter_action_retweeted : Color.GRAY}"
            android:text="@{item.statusListItem.getCreatedTime(context)}"
            tools:text="CreatedTime"
            />

        <com.freshdigitable.udonroad.listitem.TwitterReactionContainer
            android:id="@+id/d_reaction_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@id/d_via"
            app:layout_constraintBottom_toBottomOf="@id/d_via"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/d_via"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginRight="@dimen/detail_grid_margin"
            android:layout_marginEnd="@dimen/detail_grid_margin"
            app:stats="@{item.stats}"
            />

        <TextView
            android:id="@+id/d_via"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_grid_margin"
            app:layout_constraintTop_toBottomOf="@id/d_create_at"
            app:layout_constraintStart_toEndOf="@id/d_reaction_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/d_quoted"
            android:gravity="end"
            android:textSize="@dimen/tweet_small_fontsize"
            android:lines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@{@string/tweet_via(item.source)}"
            tools:text="via clientname"
            />

        <include
            layout="@layout/view_quoted_status"
            android:id="@+id/d_quoted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_grid_margin"
            app:layout_constraintTop_toBottomOf="@id/d_via"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/s_rounded_frame_default"
            app:item="@{item.quotedItem}"
            tools:visibility="visible"
            />
    </android.support.constraint.ConstraintLayout>
</layout>