<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/iffabMenu_main_fav"
        android:icon="@drawable/ic_like"
        android:orderInCategory="90"
        android:title="@string/iffab_menu_title_fav"
        app:toolbarIconColorState="@color/selector_fav_icon"
        />
    <item
        android:id="@id/iffabMenu_main_rt"
        android:icon="@drawable/ic_retweet"
        android:orderInCategory="0"
        android:title="@string/iffab_menu_title_rt"
        app:toolbarIconColorState="@color/selector_rt_icon"
        />
    <item
        android:id="@id/iffabMenu_main_favRt"
        android:orderInCategory="45"
        android:title="@string/iffab_menu_title_fav_rt"
        />
    <item
        android:id="@+id/iffabMenu_main_quote"
        android:icon="@drawable/ic_quote"
        android:orderInCategory="315"
        android:title="@string/iffab_menu_title_quote"
        />
    <item
        android:id="@+id/iffabMenu_main_reply"
        android:icon="@drawable/ic_reply"
        android:orderInCategory="270"
        android:title="@string/iffab_menu_title_reply"
        />
    <item
        android:id="@+id/iffabMenu_main_detail"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="180"
        android:title="@string/iffab_menu_title_detail"
        />
    <item
        android:id="@+id/iffabMenu_main_conv"
        android:icon="@drawable/ic_forum"
        android:orderInCategory="225"
        android:title="@string/iffab_menu_title_show_conversation"
        />
    <item
        android:id="@+id/iffabMenu_main_delete"
        android:icon="@drawable/ic_delete_action_color_24dp"
        android:orderInCategory="1000"
        android:title="@string/iffab_menu_title_delete"
        />
</menu>