...
        android:textSize="@dimen/tweet_small_fontsize"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/user_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignTop="@+id/user_icon"
        android:layout_toEndOf="@+id/user_icon"
        android:layout_toRightOf="@id/user_icon"
...
        android:background="@color/layer_white_transparent"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_screen_name"
        android:layout_alignLeft="@+id/user_screen_name"
        android:layout_alignStart="@id/user_screen_name"
        android:paddingStart="@dimen/grid_margin"
...
