...
    <string name="action_resumeTweet">Resume Tweet</string>

    <string name="user_following">following</string>
    <string name="user_muting">muting</string>
    <string name="user_blocking">blocking</string>

    <string name="title_home">home</string>
    <string name="title_conv">conversation</string>
    <string name="title_detail">tweet</string>
    <string name="title_search">search</string>
    <string name="title_tweet">what\'s happening?</string>
    <string name="title_reply">reply</string>
    <string name="title_comment">comment</string>
    <string name="title_oauth">welcome</string>
    <string name="title_add_account">add registered account</string>
...
